--- a/app/src/main/res/layout/fragment_agenda.xml
+++ b/app/src/main/res/layout/fragment_agenda.xml
@@ -87,6 +87,18 @@
         app:layout_constraintTop_toBottomOf="@id/search_view" />
 
 
+    <ImageView
+        android:id="@+id/contact_not_found_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/baseline_cancel_presentation_24"
+        app:layout_constraintTop_toBottomOf="@id/search_view"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="contentDescription" />
+
     <ImageButton
         android:id="@+id/add_contact_button"
         android:layout_width="70dp"
