Solved bug where if no contact was found, the display error message would have remained visible and also the search bar works now with dark mode.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
 
     <style name="AppSearchView" parent="Widget.AppCompat.SearchView" >
         <item name="android:textSize">30sp</item>
-        <item name="android:textColor">@color/grey</item>
+        <item name="android:textColor">?android:textColorPrimary</item>
     </style>
 
 </resources>
